# alib

./: .gitignore  3-28.py  LICENSE  Makefile.am  README.md  alib.tex  configure.ac
nbproject/: configurations.xml  project.xml
src/: CMakeLists.txt  Makefile.am  alib.tex  chapter_2.c  chapter_2.h  chapter_2.nw  chapter_3.c  chapter_3.h  chapter_3.nw  chapter_4.c  chapter_4.h  chapter_4.nw  chapter_5.c  chapter_5.h  chapter_5.nw  compare.c  contract.c  contract.h  genrandom.py  main.c  main.nw  math.c  math.h  math_extended.c  math_extended.h  object.c  object.h  string.nw  test.c  test.h
src/chapter_2/: chapter_2.c  math.c  math.h  sort.c  sort.h  string.c  string.h
src/chapter_3/: algorithm.c  algorithm.h  array.c  array.h  array_container.c  array_container.h  binary_node.c  binary_node.h  binary_tree.c  binary_tree.h  chapter_3.c  chapter_3.h  chapter_3_values.c  chapter_3_values.h  compare.c  compare.h  container.c  container.h  container_test.c  container_test.h  dictionary.c  dictionary.h  graph.h  hash.c  hashtable.c  hashtable.h  iterator.c  iterator.h  linked_stack.c  list.c  list.h  node.c  node.h  partial_sum.c  partial_sum.h  priority_queue.c  priority_queue.h  queue.c  queue.h  range_container.c  (+13 more)
src/chapter_4/: heap.c  heap.h
src/diag/: contract.c  contract.h  contract.nw
src/lang/: algorithm.c  algorithm.h  algorithm.nw  array.c  array.h  array.nw  class.c  class.h  class.nw  compare.c  compare.h  compare.nw  equals.c  equals.h  equals.nw  hash.c  hash.h  hash.nw  math_extended.c  math_extended.h  math_extended.nw  object.c  object.h  object.nw  sort.c  sort.h  sort.nw  sort_int.c  sort_int.h  string.c  string.h  string.nw  tuple.c  tuple.h  type.h  type.nw  unsafe.h  unsafe.nw  visitor.h
src/test/: test.c  test.h  test.nw  test_container.c  test_container.h  test_container.nw  test_container_values.c  test_container_values.h  test_container_values.nw  test_sort.c  test_sort.h  test_sort.nw
src/util/: .linked_graph.c.swp  array.c  array_container.c  array_container.h  array_container.nw  array_list.c  array_list.h  binary_node.c  binary_node.h  binary_node.nw  binary_tree.c  binary_tree.h  binary_tree.nw  color_array.c  color_array.h  color_array.nw  compare.c  compare.h  container.c  container.dot  container.h  container.nw  dictionary.c  dictionary.dot  dictionary.h  dictionary.nw  edge_node.c  edge_node.h  edge_node.nw  graph.c  graph.dot  graph.h  graph.nw  graph_iterator.c  graph_iterator.dot  graph_iterator.h  graph_visitor.c  graph_visitor.h  graph_visitor.nw  hashtable.c  (+76 more)
wcltx/: Makefile  wcltx.w
