cmake_minimum_required(VERSION 2.8)
include_directories(/Users/bdkoepke/src/libhoare/src/build)
include_directories(/Users/bdkoepke/src/libobject/src/build)
link_directories(/Users/bdkoepke/src/libhoare/src/build)
link_directories(/Users/bdkoepke/src/libobject/src/build)
include(noweb.cmake)
include(UseLatex)
########### next target ###############
set(alib_C
    chapter_2.c
    chapter_3.c
    chapter_4.c
    chapter_5.c
    lang/algorithm.c
    lang/array.c
    lang/compare.c
    lang/equals.c
    lang/hash.c
    lang/math_extended.c
    lang/sort.c
    lang/string.c
    main.c
    test/test.c
    test/test_container.c
    test/test_container_values.c
    test/test_sort.c
    util/array_container.c
    util/binary_node.c
    util/binary_tree.c
    util/color_array.c
    util/container.c
    util/dictionary.c
    util/edge_node.c
    util/graph.c
    util/graph_visitor.c
    util/hashtable.c
    util/heap.c
    util/hnode.c
    util/iterable.c
    util/iterator.c
    util/key_value_pair.c
    util/linked_graph.c
    util/linked_queue.c
    util/linked_stack.c
    util/node.c
    util/partial_sum.c
    util/priority_queue.c
    util/queue.c
    util/range_container.c
    util/set.c
    util/sorted_dictionary.c
    util/sorted_set.c
    util/sparse_vector.c
    util/stack.c
    util/tree.c
    util/vector.c)                 
set(alib_H
    chapter_2.h
    chapter_3.h
    chapter_4.h
    chapter_5.h
    lang/algorithm.h
    lang/array.h
    lang/compare.h
    lang/equals.h
    lang/hash.h
    lang/math_extended.h
    lang/sort.h
    lang/string.h
    lang/type.h
    test/test.h
    test/test_container.h
    test/test_container_values.h
    test/test_sort.h
    util/array_container.h
    util/binary_node.h
    util/binary_tree.h
    util/color_array.h
    util/container.h
    util/dictionary.h
    util/edge_node.h
    util/graph.h
    util/graph_visitor.h
    util/hashtable.h
    util/heap.h
    util/hnode.h
    util/iterable.h
    util/iterator.h
    util/key_value_pair.h
    util/linked_graph.h
    util/linked_queue.h
    util/linked_stack.h
    util/matrix_graph.h
    util/node.h
    util/partial_sum.h
    util/priority_queue.h
    util/queue.h
    util/range_container.h
    util/red_black_tree.h
    util/set.h
    util/sorted_dictionary.h
    util/sorted_set.h
    util/sparse_vector.h
    util/stack.h
    util/tree.h
    util/vector.h)
set(alib_TEX
    chapter_2.tex
    chapter_3.tex
    chapter_4.tex
    chapter_5.tex
    lang/algorithm.tex
    lang/array.tex
    lang/compare.tex
    lang/equals.tex
    lang/hash.tex
    lang/math_extended.tex
    lang/sort.tex
    lang/string.tex
    lang/type.tex
    main.tex
    test/test.tex
    test/test_container.tex
    test/test_container_values.tex
    test/test_sort.tex
    util/array_container.tex
    util/binary_node.tex
    util/binary_tree.tex
    util/color_array.tex
    util/container.tex
    util/dictionary.tex
    util/edge_node.tex
    util/graph.tex
    util/graph_visitor.tex
    util/hashtable.tex
    util/heap.tex
    util/hnode.tex
    util/iterable.tex
    util/iterator.tex
    util/key_value_pair.tex
    util/linked_graph.tex
    util/linked_queue.tex
    util/linked_stack.tex
    util/matrix_graph.tex
    util/node.tex
    util/partial_sum.tex
    util/priority_queue.tex
    util/queue.tex
    util/range_container.tex
    util/red_black_tree.tex
    util/set.tex
    util/sorted_dictionary.tex
    util/sorted_set.tex
    util/sparse_vector.tex
    util/stack.tex
    util/tree.tex
    util/vector.tex)

tangle("${alib_H}")
tangle("${alib_C}")
weave("${alib_TEX}")
add_custom_target(tangle DEPENDS ${alib_H} ${alib_C})
add_custom_target(weave DEPENDS ${alib_TEX})

add_executable(alib ${alib_C})
add_dependencies(alib tangle)
target_link_libraries(alib m hoare object)

add_latex_document(alib.tex
                   FORCE_PDF
                   TARGET_NAME book)
add_dependencies(book_pdf weave)
