AM_CFLAGS = $(ALIB_CFLAGS)\
  -Wall\
  -Werror\
  -Wextra\
  -Wunused-function\
  -std=c11\
  -pedantic-errors\
  -g

bin_PROGRAMS = alib

alib_SOURCES =\
  chapter_2.c\
  chapter_3.c\
  chapter_4.c\
  chapter_5.c\
  diag/contract.c\
  lang/algorithm.c\
  lang/array.c\
  lang/class.c\
  lang/hash.c\
  lang/math_extended.c\
  lang/object.c\
  lang/sort.c\
  lang/string.c\
  lang/tuple.c\
  main.c\
  test/test.c\
  test/test_container.c\
  test/test_container_values.c\
  test/test_sort.c\
  util/array_container.c\
  util/binary_node.c\
  util/binary_tree.c\
  util/color_array.c\
  util/compare.c\
  util/container.c\
  util/dictionary.c\
  util/edge_node.c\
  util/graph.c\
  util/hashtable.c\
  util/heap.c\
  util/hnode.c\
  util/iterable.c\
  util/iterator.c\
  util/key_value_pair.c\
  util/linked_graph.c\
  util/linked_queue.c\
  util/linked_stack.c\
  util/node.c\
  util/partial_sum.c\
  util/priority_queue.c\
  util/queue.c\
  util/range_container.c\
  util/set.c\
  util/sorted_dictionary.c\
  util/sorted_set.c\
  util/sparse_vector.c\
  util/stack.c\
  util/tree.c\
  util/vector.c

alib_CFLAGS = $(ALIB_CFLAGS)

alib_LDFLAGS = -lm

alib_LDADD = $(ALIB_LIBS)
